# Full-Stack-Banking-System-C-C-.NET-REST-API-WebSocket-

./: .gitignore  README.md
BankApi/: BankApi.csproj  BankApi.http  Program.cs  appsettings.json
BankApi/Hubs/: AccountHub.cs
BankApi/Properties/: launchSettings.json
BankApi/Services/: EngineClient.cs  TokenService.cs
BankApi/wwwroot/: index.html
database/: schema.sql
engine/: CMakeLists.txt
engine/src/: main.cpp
